# customPythonBioinfotools

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
cstbioinfo/: MSA.py  __init__.py  msa.py  tax.py
cstbioinfo/airr/: __init__.py  clone.py  utils.py
cstbioinfo/embedding/: __init__.py  embeddings.py  modelAnarcii.py  modelAntiberta2.py  modelEsm2.py  modelIgbert.py  modelPiggen.py  tl.py  types.py  utils.py
cstbioinfo/immune/: __init__.py  ruzicka.py  similarity.py  utils.py
cstbioinfo/phylo/: __init__.py  fasttree.py
docs/: examples.md  index.md
docs/api/: embeddings.md  msa.md  tax.md
examples/: MSA.ipynb  README.md  embedding.ipynb  embedding_paired.ipynb  pholgenetic.ipynb  ruzicka.ipynb  taxid.ipynb
examples/data/: Bashford_2013.txt
notebooks/: MSA.ipynb
test/: test_clone.py  test_docs.py  test_embeddings.py  test_embeddings_paired.py  test_ruzicka.py  test_similarity.py
