[project]
name = "cstbioinfo"
version = "0.1.0"
description = "My personal bioinfo usefull tools."
readme = "README.md"
authors = [{name = "Paul Saary", email = "github@paulsaary.de"}]
license = "Apache-2.0"
requires-python = ">=3.10"
classifiers = []

dependencies = [
    "p9customtheme>=0.1.0,<1.0.0",
    "plotnine>=0.14.5,<1.0.0",
    "biopython>=1.80,<2.0.0",
    "pymsaviz>=0.4.0,<1.0.0",
    "ete3>=3.1.3,<4.0.0",
    "appdirs>=1.4.0,<2.0.0",
    "sqlalchemy>=1.4.0,<3.0.0",
    "polars[pyarrow]>=1.3.2,<2.0.0",
    "tqdm>=4.67.1,<5.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cstbioinfo*"]
exclude = ["notebooks*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/openpaul/cstbioinfo"
Changelog = "https://github.com/openpaul/cstbioinfo/releases"
Issues = "https://github.com/openpaul/cstbioinfo/issues"
CI = "https://github.com/openpaul/cstbioinfo/actions"


[project.optional-dependencies]
# Embedding/ML dependencies
embedding = [
    "torch>=2.2.0,<3.0.0",
    "transformers>=4.0.0,<5.0.0",
    "numpy>=2.0.0,<2.5.0",
    "anarcii>=2.0.0,<2.1.0",  # for ANARCII embeddings
    "umap-learn==0.5.9.post2",
    "protobuf>=6.0.0,<7.0.0",
    "rjieba>=0.1.0,<1.0.0"
]

# All features (normal + embedding)
full = [
    "cstbioinfo[embedding]",
]

# Documentation dependencies
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-macros-plugin>=1.0.0",
]

# Development dependencies (full + testing tools + docs)
dev = [
    "cstbioinfo[full]",
    "cstbioinfo[docs]",
    "pytest",
    "mktestdocs",
    "ruff",
]
